Forms ruta servlet fix

--- a/src/main/webapp/Usuario/loginUsuario.html
+++ b/src/main/webapp/Usuario/loginUsuario.html
@@ -15,7 +15,7 @@ and open the template in the editor.
         
         <main>
             Login
-            <form action="/ProyectoFinal/UsuarioServlet" method="POST">
+            <form action="/UsuarioServlet" method="POST">
                 <label for="correo">Correo</label>
                 <input type="email" id="correo" name="correo" required />
                 <label for="pass">Password</label>
