--- a/src/main/webapp/Usuario/registroUsuario.html
+++ b/src/main/webapp/Usuario/registroUsuario.html
@@ -10,7 +10,7 @@
             Header
         </header>
         <main>
-            <form action="/ProyectoFinal/UsuarioServlet">
+            <form action="/UsuarioServlet">
                 <label for="usuario">Usuario:</label>
                 <input type="text" id="usuario" name="usuario" required />
                 <label for="correo">Correo</label>
