Link reporte style

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -49,6 +49,7 @@
         <div class="texto">
             <p class="antojo">¿Tienes antojo de algo? </p>
             <p class="iniciaSesion">Presiona el platillo que más se adecue a tu antojo</p>
+            <a href="/UsuarioServlet?accion=reporte" class="reporteLink">Descargar todos los platillos (Reporte PDF)</a>
         </div>
         
         <div class="plaContainer">
@@ -86,8 +87,6 @@
         </div>
 
     </div>
-
-    <a href="/UsuarioServlet?accion=reporte">Ver reporte</a>
     
 </body>
 </html>
