--- a/src/main/webapp/Usuario/loginUsuario.html
+++ b/src/main/webapp/Usuario/loginUsuario.html
@@ -21,10 +21,10 @@ and open the template in the editor.
                     <h1><center>Iniciar Sesión </center></h1>
                 </div>
                 <label>
-                    <input type="email" placeholder="Correo Electronico" />
+                    <input type="email" id="correo" name="correo" required/>
                 </label>
                 <label>
-                    <input type="password" placeholder="Password" />
+                    <input type="password" id="pass" name="pass" required />
                 </label>
                 <a class="waves-effect waves-light btn"><input type="submit" name="accion" value="Iniciar Sesión" /></a>
                 <!--
