--- a/src/main/webapp/Usuario/loginUsuario.html
+++ b/src/main/webapp/Usuario/loginUsuario.html
@@ -10,6 +10,7 @@ and open the template in the editor.
     <title>Log in Usuario</title>
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
 </head>
     <body>
         
@@ -26,7 +27,7 @@ and open the template in the editor.
                 <label>
                     <input type="password" id="pass" name="pass" required />
                 </label>
-                <a class="waves-effect waves-light btn"><input type="submit" name="accion" value="Iniciar Sesión" /></a>
+                <a class="waves-effect waves-light btn"><input type="submit" name="accion" value="Login" /></a>
                 <!--
     <label for="correo">Correo</label>
     <input type="email" id="correo" name="correo" required />
