--- a/src/main/webapp/Usuario/registroUsuario.html
+++ b/src/main/webapp/Usuario/registroUsuario.html
@@ -22,13 +22,13 @@
             </div>
 
             <div class="form-group">
-                <label for="correo">Correo</label>
+                <label for="correo">Contraseña</label>
                 <input type="password" class="form-control" id="pass" name="pass"  aria-describedby="emailHelp" placeholder="Password" required>
             </div>
 
             <div class="mt-5">
                 <input type="submit" name="accion" value="Registrar Usuario" class="btn btn-outline-dark btn-block" />
-                <a href="/Usuario/loginUsuario.html" class="btn btn-info btn-block">Login</a>
+                <a href="/Usuario/loginUsuario.html" class="btn btn-info btn-block">Regresar al Login</a>
             </div>
         </form>
     </div>
